--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@ericblade/quagga2": "^1.0.6",
+    "@material-ui/core": "^4.10.1",
     "concurrently": "^5.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.5.8",
-    "mongoose": "^5.9.16"
+    "mongoose": "^5.9.16",
+    "react-router-dom": "^5.2.0",
+    "react-transition-group": "1.x",
+    "scandit-sdk": "^5.0.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
