--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "dependencies": {
     "@ericblade/quagga2": "^1.0.6",
     "@material-ui/core": "^4.10.1",
+    "@material-ui/icons": "^4.9.1",
     "concurrently": "^5.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.5.8",
     "mongoose": "^5.9.18",
+    "react-router-dom": "^5.2.0",
     "validator": "^13.0.0"
   },
   "devDependencies": {
