--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@ericblade/quagga2": "^1.0.6",
     "@material-ui/core": "^4.10.1",
+    "axios": "^0.19.2",
     "@material-ui/icons": "^4.9.1",
     "concurrently": "^5.2.0",
     "cors": "^2.8.5",
