--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "license": "MIT",
+  "proxy": "3000",
   "dependencies": {
     "@ericblade/quagga2": "^1.0.6",
     "@material-ui/core": "^4.10.1",
