--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "concurrently": "^5.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.8",
     "mongoose": "^5.9.18",
     "react-router-dom": "^5.2.0",
+    "stripe": "^8.63.0",
     "validator": "^13.0.0"
   },
   "devDependencies": {
