--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.27.0",
     "mongodb": "^3.5.8",
     "mongoose": "^5.9.18",
     "react-router-dom": "^5.2.0",
